{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -18,3 +18,7 @@ Second Runner-Up!</p>
 <p>Heartiest congratulations to Saanvi for her outstanding achievement and
 for doing the school proud!</p>
 <p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/RVHS_PS.jpg">
+</div>
+<p></p>
