{"message":"Update file: 2025.md","userId":"967","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -21,4 +21,10 @@ for doing the school proud!</p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/RVHS_PS.jpg">
 </div>
+<h3>Senior Division Boys National School Games Badminton (3rd Place)</h3>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/Badminton_Achievement.png">
+</div>
+<p></p>
 <p></p>
