--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,7 +4,53 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
-<h3>River Valley High School Vivid Voices Public Speaking Invitational</h3>
+<h3><strong>Bangsawan Cup (Opera Theatre Competition)</strong></h3>
+<p>held at the Woodlands Regional Library Auditorium. This traditional Malay
+opera competition provided a platform for students to showcase their creativity,
+teamwork and love for the Malay language through drama.</p>
+<p>In the weeks leading up to the event, the students trained diligently,
+showing great commitment and enthusiasm. Their hard work shone through
+during the full-dress rehearsals where they embraced the experience of
+performing in costume and using props.</p>
+<p>On the day of the competition, Malay Language teachers and Parent Volunteers
+rallied together to accompany and cheer on the students. Our young performers
+performed confidently and delivered a remarkable show before a panel of
+judges and public audience.</p>
+<p>We are proud to share that <strong>Unity Primary School clinched the 1st Place</strong>,
+and also brought home six special awards:</p>
+<ul data-tight="true" class="tight">
+<li>
+<p><em>Best Direction</em>
+</p>
+</li>
+<li>
+<p><em>Best Props</em>
+</p>
+</li>
+<li>
+<p><em>Best Actor</em>: Harraz Muhammad Bin Wahyudy (3B)</p>
+</li>
+<li>
+<p><em>Best Actress</em>: Daanya Omera Binte Faris Ashraf (3C)</p>
+</li>
+<li>
+<p><em>Best Supporting Actress</em>: Sarah Arissa Binte Ahmad Khairul Khalis
+(3C)</p>
+</li>
+<li>
+<p><em>Most Promising Opera Performer</em>: Alayna Miasarah Binte Muhammad
+Yusof (2B)</p>
+</li>
+</ul>
+<p>This enriching experience not only nurtured our students’ confidence and
+appreciation for the arts but strengthened friendships. It was truly a
+memorable journey that will be cherished for years to come.</p>
+<p>&nbsp;</p>
+<div class="iframe-wrapper">
+<iframe height="315" width="560" allowfullscreen="true" frameborder="0" src="https://www.youtube.com/embed/61M2onF8IbM?si=JpQGcJcZUPzxAxPW"></iframe>
+</div>
+<p></p>
+<h3><strong>River Valley High School Vivid Voices Public Speaking Invitational</strong></h3>
 <p>Our school proudly participated in the inaugural River Valley High School
 Vivid Voices Public Speaking Invitational 2025. Organised by River Valley
 High School through its oracy talent programme, Vivid Voices, this one-day
@@ -21,7 +67,7 @@ for doing the school proud!</p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/RVHS_PS.jpg">
 </div>
-<h3>Senior Division Boys National School Games Badminton (3rd Place)</h3>
+<h3><strong>Senior Division Boys National School Games Badminton (3rd Place)</strong></h3>
 <p></p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/Badminton_Achievement.png">
