{"message":"Update file: 2025.md","userId":"967","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,6 +4,18 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
+<h3><strong>NWCDC School Partner Award</strong></h3>
+<p>The NWCDC School Partner Award honours schools within the North West district
+for their meaningful contributions to the community through active participation
+in North West Community Development Council (NWCDC) initiatives. This accolade
+recognises schools that empower students to engage in outreach and environmental
+programmes, nurturing both personal development and a strong sense of social
+responsibility.</p>
+<p>Unity Primary School is proud to be a recipient of this prestigious award.
+Through our sustained efforts and commitment, our students have made a
+positive impact in the community. We remain dedicated to nurturing socially
+responsible citizens and celebrating the good work of our students in serving
+others.</p>
 <h3><strong>Bangsawan Cup (Opera Theatre Competition)</strong></h3>
 <p>held at the Woodlands Regional Library Auditorium. This traditional Malay
 opera competition provided a platform for students to showcase their creativity,
