{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,6 +4,13 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
+<h3><strong>Asia-Pacific Mathematical Olympiad for Primary Schools (APMOPS)</strong></h3>
+<p><strong>Congratulations to the following students!</strong>
+</p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/Collage_1.jpg">
+</div>
+<p></p>
 <h3><strong>NWCDC School Partner Award</strong></h3>
 <p>The NWCDC School Partner Award honours schools within the North West district
 for their meaningful contributions to the community through active participation
