{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -5,12 +5,167 @@ variant: tiptap
 description: ""
 ---
 <h3><strong>Asia-Pacific Mathematical Olympiad for Primary Schools (APMOPS)</strong></h3>
-<p><strong>Congratulations to the following students!</strong>
-</p>
+<p>Congratulations to the following students!</p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/Collage_1.jpg">
 </div>
 <p></p>
+<h3><strong>Singapore &amp; Asian Schools Math Olympiad (SASMO)</strong></h3>
+<p>Congratulations to the following students!</p>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/Collage_.jpg">
+</div>
+<table style="minWidth: 100px">
+<colgroup>
+<col>
+<col>
+<col>
+<col>
+</colgroup>
+<tbody>
+<tr>
+<th rowspan="1" colspan="1">
+<p>Honorable Mention</p>
+</th>
+<th rowspan="1" colspan="1">
+<p>Bronze</p>
+</th>
+<th rowspan="1" colspan="1">
+<p>Silver</p>
+</th>
+<th rowspan="1" colspan="1">
+<p>Gold</p>
+</th>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>TYDUS HO HAO MING</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>TRIVEDI TANVI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>NICHOLAS CHIA JIA JUN</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>SIA YU JECT</p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>FOO REN JIE</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>ALI SK IZYAN AHAD</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>CHONG YU ZHE JORDAN</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>YONG JUN HAO</p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>ONG XI MIN CHARLOTTE</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>WONG SHAO KEAT</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>YONG SHU YU</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>CHOW ZE XUAN</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>KASTURI SOMAMSU BABU</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>TAN YOU ZHI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>NEPHELE LEE JIE XIU</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>LUONG TUAN KHOI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>DOSHI RIDHAAN GUNJAN</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>BOMMAKANTI ANANYA LAKSHMI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>ARYAN SHARMA</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>KANG JUN XI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>LEE ZHIXUAN</p>
+</td>
+<td rowspan="1" colspan="1">
+<p>PATIL KHYATI MAYUR</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+<tr>
+<td rowspan="1" colspan="1">
+<p>SHANKAR SANVI</p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
+</td>
+</tr>
+</tbody>
+</table>
 <h3><strong>NWCDC School Partner Award</strong></h3>
 <p>The NWCDC School Partner Award honours schools within the North West district
 for their meaningful contributions to the community through active participation
