{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,6 +4,29 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
+<h3><strong>The Moo-O Awards 2025</strong></h3>
+<p>The Singapore Moo-O Awards is a nation-wide digital storytelling competition
+for Primary 2 students, celebrating their ability to read aloud expressively
+in English Language through the Moo-O videos they create. The Awards aim
+to inspire young learners to improve their reading skills and foster a
+lifelong love for the English Language through a fun, engaging and immersive
+reading experience.</p>
+<p>Alayna Miasarah Binte Muhammad Yusof (2B), Nur Yasmin Binte Mohammed Helmi
+(2D), and Lim Yu Chen (2E) did our school proud when they garnered a Bronze
+Award at the recent Moo-O Awards 2025! In preparation for the competition,
+the students dedicated many weeks to practising their pronunciation, intonation
+and expression. They also worked closely with their teacher and peers to
+refine their storytelling skills, demonstrating resilience and a positive
+learning attitude throughout the process.</p>
+<p>In doing so, they exemplified school values and 21st Century Competencies
+(E21CC) of Communication, Collaboration and Information Skills, as they
+effectively conveyed emotions through speech and worked as a team to produce
+a captivating digital story. Keep up the good work, children!</p>
+<div class="isomer-image-wrapper">
+<img style="width: 50%;" height="auto" width="100%" alt="" src="/images/Achievements/2025/Moo_O_2.jpg">
+</div>
+<p></p>
+<p></p>
 <h3><strong>Asia-Pacific Mathematical Olympiad for Primary Schools (APMOPS)</strong></h3>
 <p>Congratulations to the following students!</p>
 <div class="isomer-image-wrapper">
