{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,6 +4,28 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
+<h3><strong>National Public Speaking Competition</strong></h3>
+<p>The National Public Speaking Competition (NPSC) is a premier contest for
+students in the Primary and Secondary categories. Each year, contestants
+test their skills against the nation’s top speakers, gaining invaluable
+experience along the way. Now in its 12th year, the NPSC stands as one
+of the country’s largest and most prestigious platforms for aspiring communicators
+to shine..</p>
+<p>This year, Patil Khyati Mayur from Primary 6F has raised the bar, clinching
+1<sup>st</sup> place nationwide! She dazzled the audience with her poise
+and eloquence, excelling in both the prepared and impromptu speech rounds.
+Her composure during the impromptu segment, where she spoke on the challenging
+topic “How would you comfort your friend if they lost a speech contest?”,
+kept the judges and audience rapt with attention. Looking back on her journey
+at UPS, she attributes her success to the rigorous training from the ELDD
+Club and the dedicated guidance of the English Department teachers. Together,
+they have nurtured in her resilience, determination and the courage to
+rise to every challenge. Heartiest congratulations and kudos to her for
+doing the school proud!</p>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 80%;" height="auto" width="100%" alt="" src="/images/Achievements/2025/NPSC_Primary___2025_Top_5_Group_Photo.png">
+</div>
 <h3><strong>The Moo-O Awards 2025</strong></h3>
 <p>The Singapore Moo-O Awards is a nation-wide digital storytelling competition
 for Primary 2 students, celebrating their ability to read aloud expressively
