{"message":"Update file: 2025.md","userId":"1095","fileName":"2025.md"}

--- a/_achievements/2025.md
+++ b/_achievements/2025.md
@@ -4,6 +4,57 @@ permalink: /achievements2025/permalink/
 variant: tiptap
 description: ""
 ---
+<h3><strong>The National Primary Schools Chinese Story-Telling Competition 2025</strong></h3>
+<p>The school is proud to share that Lim Yu Chen from 2E has achieved the
+remarkable feat of becoming one of only 15 finalists in the 20th National
+Primary School Chinese Storytelling Competition Grand Finals. This prestigious
+competition is jointly organized by the Singapore Hokkien Huay Kuan and
+the Singapore Middle School Chinese Teachers’ Association.</p>
+<p>Yu Chen's achievement is especially commendable as he competed against
+131 students from 69 schools across Singapore—the largest participation
+in recent years. His success in reaching the finals is a testament to his
+outstanding storytelling skills, confidence and passion for the Chinese
+language, and he has done our school proud through his impressive performance.</p>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 60%;" height="auto" width="100%" alt="" src="/images/Achievements/2025/Lim_Yu_Chen_2E.jpg">
+</div>
+<h3><strong>29th National Primary Schools On-the-Spot Chinese Creative Essay Writing Competition</strong></h3>
+<p>Our students have done the school proud by achieving outstanding results
+in the 29th National Primary Schools cum 16th Singapore-Malaysia-Brunei
+On-The-Spot Chinese Creative Essay Writing Competition. This was jointly
+organized by the Singapore Foochow Association, the Singapore Chinese Teachers'
+Union and the Singapore Writers' Association.</p>
+<p>Since its launch in 1995, this competition has promoted Chinese culture
+and encouraged creative writing. This year, it attracted over 600 participants
+from schools across Singapore, Malaysia and Brunei. We are very happy to
+share the following good news:</p>
+<p>• Lahri Arushi from 6E won the Outstanding Award, Category 丁</p>
+<p>• Ong Xi Min, Charlotte from 5D won the Merit Award, Category 乙</p>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Achievements/2025/collage.jpg">
+</div>
+<p></p>
+<h3><strong>8th National Text Recital Competition</strong></h3>
+<p>We are proud to share that Lim Yu Chen from 2E achieved an outstanding
+Bronze Medal in the individual category of the 8th National Text Recital
+Competition. His achievement is particularly commendable given the exceptional
+level of competitiona record-breaking 2,525 students from 272 schools across
+Singapore submitted over 1,400 video entries.</p>
+<p>Yu Chen was recognized for his excellent vocal articulation, fluency and
+commanding stage presence. This prestigious competition, jointly organized
+by leading educational institutions including the Committee to Promote
+Chinese Language Learning (CPCLL), aims to enhance students' Chinese language
+reading proficiency and deepen their appreciation of Chinese literature.
+Yu Chen's success demonstrates not only his linguistic abilities but also
+his dedication to mastering the art of textual interpretation and performance.</p>
+<p>Well done, Yu Chen!</p>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 70%;" height="auto" width="100%" alt="" src="/images/Achievements/2025/8th_National_Text_Recital_Competition_.jpg">
+</div>
+<p></p>
 <h3><strong>National Public Speaking Competition</strong></h3>
 <p>The National Public Speaking Competition (NPSC) is a premier contest for
 students in the Primary and Secondary categories. Each year, contestants
